chip-list menu positioning issue solved; placeholder contrast increased

--- a/src/components/atomic/Autocomplete/Autocomplete.scss
+++ b/src/components/atomic/Autocomplete/Autocomplete.scss
@@ -5,7 +5,7 @@
     position: absolute;
     background: white;
     border: 1px solid #ccc;
-    top: 65px;
+    top: 0;
     width: 100%;
     z-index: 10;
     overflow: auto;
@@ -44,6 +44,13 @@
     background: rgba(254, 230, 133, .4);
     .cts-input {
       background: none;
+
+      
+      
+    }
+    
+    *::placeholder {
+      color: #707070; 
     }
   }
   
@@ -52,6 +59,10 @@
     display: inline-block;
     width: 270px;
     margin-bottom: 0;
+  }
+
+  + .menu-anchor{
+    position: relative;
   }
 }
 
